--- a/face-analysis-site/index.html
+++ b/face-analysis-site/index.html
@@ -45,13 +45,21 @@
 
   </tbody>
 </table>
+
+<form id="theForm" method="POST" enctype="multipart/form-data" >
+    <input id="theFile" name="file" type="file"/>
+    <button id="theButton" type="submit">Enviar</button>
+</form>
+
 </div>
+
     <!-- /.container -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="js/importa-dados.js"></script>
+    <script src="js/upload.js"></script>
 
   </body>
 
